# flem

./: README.md
Flem-ambuj/: README.md  settings.gradle
Flem-ambuj/app/: CMakeLists.txt  build.gradle
Flem-ambuj/app/src/main/: AndroidManifest.xml
Flem-ambuj/app/src/main/cpp/: native-lib.cpp
Flem-ambuj/app/src/main/java/com/example/opencvgl/: GLRenderer.kt  MainActivity.kt  NativeLib.kt
Flem-ambuj/web/: index.html  main.js
